# libraryAPI

./: .gitignore  .pre-commit-config.yaml  README.md  dc.logs  docker-compose.yaml  fabfile.py  pyproject.toml  pytest.ini
.github/workflows/: backend.yml  deploy.yml  frontend.yml
docker/: Dockerfile  backend.dockerfile  backend.env  broker.env  frontend.dockerfile  frontend.env
docker/config/mariadb/: 0-init.sh
docker/config/mongodb/: 0-init.sh
schema/: init-backend_data.sql  init-backend_db.sql  init-frontend_data.js
src/backend_api/: .env  main.py
src/backend_api/modules/book/: manager.py  router.py  schemas.py
src/backend_api/modules/user/: manager.py  router.py  schemas.py
src/backend_api/shared/: broker.py  database.py  utils.py
src/frontend_api/: .env  main.py
src/frontend_api/modules/book/: blueprint.py  manager.py  schemas.py  utils.py
src/frontend_api/modules/user/: blueprint.py  manager.py  schemas.py
src/frontend_api/shared/: broker.py  database.py  error_handler.py  logger.py  utils.py
src/frontend_api/tests/test_book/: test_endpoints.py  test_manager.py  test_manager.py#
src/frontend_api/tests/test_user/: test_endpoints.py  test_manager.py
